--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ body{
     background: rgba(255, 255, 255, 0.5);
     padding: 5px 20px;
     border-radius: 10px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(255, 255, 255, 0.3);
     /* box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1); */
     transition: all 0.3s ease-in-out;
     display:flex;
