--- a/style.css
+++ b/style.css
@@ -1,140 +1,164 @@
-:root{
-    --full-width: calc(100vw - 100px);
+:root {
+  --full-width: calc(100vw - 100px);
 }
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    background-color: #333;
-    overflow: hidden;
-    color: white;
-    font-family: 'Poppins', sans-serif;
+body {
+  background-color: #333;
+  overflow: hidden;
+  color: white;
+  font-family: "Poppins", sans-serif;
 }
 
 .container {
-    /* background: #fefefe; */
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-    width: var(--full-width);
-    min-height: calc(100vh - 100px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 50px;
+  /* background: #fefefe; */
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  width: var(--full-width);
+  min-height: calc(100vh - 100px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
+}
+
+.top-frame {
+    z-index: 1;
 }
 
 .information {
-    /* background: red; */
-    width: 60vw;
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0;
+  /* background: red; */
+  width: 60vw;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
 }
 
 #game {
-    /* width: 400px;
+  /* width: 400px;
     height: 400px; */
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-gap: 0;
-    border: 3px solid #111;
-
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-gap: 0;
+  border: 3px solid #111;
+  /* z-index: 1; */
 }
 
 .cell {
-    width: 40px;
-    height: 40px;
-    border: 1px solid #333;
-    /* color: #eee; */
-    color: transparent;
-    user-select: none;
-    transition: all 0.2s ease-in-out;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #333;
+  /* color: #eee; */
+  color: transparent;
+  user-select: none;
+  transition: all 0.2s ease-in-out;
 }
 
 .light-cell {
-    background: #fff;
+  background: #fff;
 }
 
 .dark-cell {
-    background: #eee;
+  background: #eee;
 }
 
-.cell:hover{
-    /* color: #aaa; */
-    background: rgb(191, 245, 255);
-    cursor: pointer;
+.cell:hover {
+  /* color: #aaa; */
+  background: rgb(191, 245, 255);
+  cursor: pointer;
 }
 
 .enemy {
-    background: yellow;
+  background: yellow;
 }
-.enemy:hover{
-    background: red;
-    transform: scale(1.2);
-    box-shadow: 0 0 10px 10px rgba(255, 145, 0, 0.9);
+.enemy:hover {
+  background: red;
+  transform: scale(1.2);
+  box-shadow: 0 0 10px 10px rgba(255, 145, 0, 0.9);
 }
 
-.btn{
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 1.2rem;
-    color: #333;
-    background: rgba(255, 255, 255, 0.5);
-    padding: 5px 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(255, 255, 255, 0.3);
-    /* box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1); */
-    transition: all 0.3s ease-in-out;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+.glass-box {
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+.btn {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #333;
+  padding: 5px 20px;
+  transition: all 0.3s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-main {
-    letter-spacing: 1px;
-    font-weight: 900;
-    font-size: 1.5rem;
+  letter-spacing: 1px;
+  font-weight: 900;
+  font-size: 1.5rem;
 }
 
 .btn:hover {
-    color: #000 !important;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.9); */
-    transform: scale(1.2);
+  color: #000 !important;
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.9); */
+  transform: scale(1.2);
 }
 
 @media (max-width: 480px) {
-    .container {
-        width: 100vw;
-        padding: 50px 0;
-    }
-    .information{
-        width: 100vw;
-        justify-content: space-around;
-    }
-    .cell{
-        width: 8vw;
-        height: 8vw;
-    }
-    .btn{
-        font-size: 1rem;
-    }
-    .btn-main{
-        font-size: 1.2rem;
-    }
+  .container {
+    width: 100vw;
+    padding: 50px 0;
+  }
+  .information {
+    width: 100vw;
+    justify-content: space-around;
+  }
+  .cell {
+    width: 8vw;
+    height: 8vw;
+  }
+  .btn {
+    font-size: 1rem;
+  }
+  .btn-main {
+    font-size: 1.2rem;
+  }
 }
 
-@media (max-width: 280px){
-    .btn{
-        font-size: 0.6rem;
-        padding: 5px 10px;
-    }
-    .btn-main{
-        font-size: 0.8rem;
-    }
+@media (max-width: 280px) {
+  .btn {
+    font-size: 0.6rem;
+    padding: 5px 10px;
+  }
+  .btn-main {
+    font-size: 0.8rem;
+  }
+}
+
+.lighter-glass-box {
+    background: rgba(255, 255, 255, 0.35);
+    border-radius: 10px;
+    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.3), 0 0 4px 4px rgba(255, 255, 255, 0.2), 0 0 6px 10px rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+}
+
+.rotating-box {
+  transform: rotate(45deg);
+  transition: all 0.3s ease-in-out;
 }
